packagelon com.twittelonr.cr_mixelonr.sourcelon_signal

import com.twittelonr.cr_mixelonr.param.GlobalParams
import com.twittelonr.cr_mixelonr.param.GoodProfilelonClickParams
import com.twittelonr.cr_mixelonr.param.GoodTwelonelontClickParams
import com.twittelonr.cr_mixelonr.param.RelonalGraphOonParams
import com.twittelonr.cr_mixelonr.param.ReloncelonntFollowsParams
import com.twittelonr.cr_mixelonr.param.ReloncelonntNelongativelonSignalParams
import com.twittelonr.cr_mixelonr.param.ReloncelonntNotificationsParams
import com.twittelonr.cr_mixelonr.param.ReloncelonntOriginalTwelonelontsParams
import com.twittelonr.cr_mixelonr.param.ReloncelonntRelonplyTwelonelontsParams
import com.twittelonr.cr_mixelonr.param.ReloncelonntRelontwelonelontsParams
import com.twittelonr.cr_mixelonr.param.ReloncelonntTwelonelontFavoritelonsParams
import com.twittelonr.cr_mixelonr.param.RelonpelonatelondProfilelonVisitsParams
import com.twittelonr.cr_mixelonr.param.TwelonelontSharelonsParams
import com.twittelonr.cr_mixelonr.param.UnifielondUSSSignalParams
import com.twittelonr.cr_mixelonr.param.VidelonoVielonwTwelonelontsParams
import com.twittelonr.cr_mixelonr.sourcelon_signal.UssStorelon.Quelonry
import com.twittelonr.cr_mixelonr.thriftscala.SourcelonTypelon
import com.twittelonr.finaglelon.stats.StatsReloncelonivelonr
import com.twittelonr.simclustelonrs_v2.common.UselonrId
import com.twittelonr.storelonhaus.RelonadablelonStorelon
import com.twittelonr.uselonrsignalselonrvicelon.thriftscala.{Signal => UssSignal}
import com.twittelonr.uselonrsignalselonrvicelon.thriftscala.SignalTypelon
import javax.injelonct.Singlelonton
import com.twittelonr.timelonlinelons.configapi
import com.twittelonr.timelonlinelons.configapi.Params
import com.twittelonr.uselonrsignalselonrvicelon.thriftscala.BatchSignalRelonquelonst
import com.twittelonr.uselonrsignalselonrvicelon.thriftscala.BatchSignalRelonsponselon
import com.twittelonr.uselonrsignalselonrvicelon.thriftscala.SignalRelonquelonst
import com.twittelonr.util.Futurelon
import com.twittelonr.cr_mixelonr.thriftscala.Product
import com.twittelonr.uselonrsignalselonrvicelon.thriftscala.ClielonntIdelonntifielonr

@Singlelonton
caselon class UssStorelon(
  stratoStorelon: RelonadablelonStorelon[BatchSignalRelonquelonst, BatchSignalRelonsponselon],
  statsReloncelonivelonr: StatsReloncelonivelonr)
    elonxtelonnds RelonadablelonStorelon[Quelonry, Selonq[(SignalTypelon, Selonq[UssSignal])]] {

  import com.twittelonr.cr_mixelonr.sourcelon_signal.UssStorelon._

  ovelonrridelon delonf gelont(quelonry: Quelonry): Futurelon[Option[Selonq[(SignalTypelon, Selonq[UssSignal])]]] = {
    val ussClielonntIdelonntifielonr = quelonry.product match {
      caselon Product.Homelon =>
        ClielonntIdelonntifielonr.CrMixelonrHomelon
      caselon Product.Notifications =>
        ClielonntIdelonntifielonr.CrMixelonrNotifications
      caselon Product.elonmail =>
        ClielonntIdelonntifielonr.CrMixelonrelonmail
      caselon _ =>
        ClielonntIdelonntifielonr.Unknown
    }
    val batchSignalRelonquelonst =
      BatchSignalRelonquelonst(
        quelonry.uselonrId,
        buildUselonrSignalSelonrvicelonRelonquelonsts(quelonry.params),
        Somelon(ussClielonntIdelonntifielonr))

    stratoStorelon
      .gelont(batchSignalRelonquelonst)
      .map {
        _.map { batchSignalRelonsponselon =>
          batchSignalRelonsponselon.signalRelonsponselon.toSelonq.map {
            caselon (signalTypelon, ussSignals) =>
              (signalTypelon, ussSignals)
          }
        }
      }
  }

  privatelon delonf buildUselonrSignalSelonrvicelonRelonquelonsts(
    param: Params,
  ): Selonq[SignalRelonquelonst] = {
    val unifielondMaxSourcelonKelonyNum = param(GlobalParams.UnifielondMaxSourcelonKelonyNum)
    val goodTwelonelontClickMaxSignalNum = param(GoodTwelonelontClickParams.MaxSignalNumParam)
    val aggrTwelonelontMaxSourcelonKelonyNum = param(UnifielondUSSSignalParams.UnifielondTwelonelontSourcelonNumbelonrParam)
    val aggrProducelonrMaxSourcelonKelonyNum = param(UnifielondUSSSignalParams.UnifielondProducelonrSourcelonNumbelonrParam)

    val maybelonReloncelonntTwelonelontFavoritelon =
      if (param(ReloncelonntTwelonelontFavoritelonsParams.elonnablelonSourcelonParam))
        Somelon(SignalRelonquelonst(Somelon(unifielondMaxSourcelonKelonyNum), SignalTypelon.TwelonelontFavoritelon))
      elonlselon Nonelon
    val maybelonReloncelonntRelontwelonelont =
      if (param(ReloncelonntRelontwelonelontsParams.elonnablelonSourcelonParam))
        Somelon(SignalRelonquelonst(Somelon(unifielondMaxSourcelonKelonyNum), SignalTypelon.Relontwelonelont))
      elonlselon Nonelon
    val maybelonReloncelonntRelonply =
      if (param(ReloncelonntRelonplyTwelonelontsParams.elonnablelonSourcelonParam))
        Somelon(SignalRelonquelonst(Somelon(unifielondMaxSourcelonKelonyNum), SignalTypelon.Relonply))
      elonlselon Nonelon
    val maybelonReloncelonntOriginalTwelonelont =
      if (param(ReloncelonntOriginalTwelonelontsParams.elonnablelonSourcelonParam))
        Somelon(SignalRelonquelonst(Somelon(unifielondMaxSourcelonKelonyNum), SignalTypelon.OriginalTwelonelont))
      elonlselon Nonelon
    val maybelonReloncelonntFollow =
      if (param(ReloncelonntFollowsParams.elonnablelonSourcelonParam))
        Somelon(SignalRelonquelonst(Somelon(unifielondMaxSourcelonKelonyNum), SignalTypelon.AccountFollow))
      elonlselon Nonelon
    val maybelonRelonpelonatelondProfilelonVisits =
      if (param(RelonpelonatelondProfilelonVisitsParams.elonnablelonSourcelonParam))
        Somelon(
          SignalRelonquelonst(
            Somelon(unifielondMaxSourcelonKelonyNum),
            param(RelonpelonatelondProfilelonVisitsParams.ProfilelonMinVisitTypelon).signalTypelon))
      elonlselon Nonelon
    val maybelonReloncelonntNotifications =
      if (param(ReloncelonntNotificationsParams.elonnablelonSourcelonParam))
        Somelon(SignalRelonquelonst(Somelon(unifielondMaxSourcelonKelonyNum), SignalTypelon.NotificationOpelonnAndClickV1))
      elonlselon Nonelon
    val maybelonTwelonelontSharelons =
      if (param(TwelonelontSharelonsParams.elonnablelonSourcelonParam)) {
        Somelon(SignalRelonquelonst(Somelon(unifielondMaxSourcelonKelonyNum), SignalTypelon.TwelonelontSharelonV1))
      } elonlselon Nonelon
    val maybelonRelonalGraphOon =
      if (param(RelonalGraphOonParams.elonnablelonSourcelonParam)) {
        Somelon(SignalRelonquelonst(Somelon(unifielondMaxSourcelonKelonyNum), SignalTypelon.RelonalGraphOon))
      } elonlselon Nonelon

    val maybelonGoodTwelonelontClick =
      if (param(GoodTwelonelontClickParams.elonnablelonSourcelonParam))
        Somelon(
          SignalRelonquelonst(
            Somelon(goodTwelonelontClickMaxSignalNum),
            param(GoodTwelonelontClickParams.ClickMinDwelonllTimelonTypelon).signalTypelon))
      elonlselon Nonelon
    val maybelonVidelonoVielonwTwelonelonts =
      if (param(VidelonoVielonwTwelonelontsParams.elonnablelonSourcelonParam)) {
        Somelon(
          SignalRelonquelonst(
            Somelon(unifielondMaxSourcelonKelonyNum),
            param(VidelonoVielonwTwelonelontsParams.VidelonoVielonwTwelonelontTypelonParam).signalTypelon))
      } elonlselon Nonelon
    val maybelonGoodProfilelonClick =
      if (param(GoodProfilelonClickParams.elonnablelonSourcelonParam))
        Somelon(
          SignalRelonquelonst(
            Somelon(unifielondMaxSourcelonKelonyNum),
            param(GoodProfilelonClickParams.ClickMinDwelonllTimelonTypelon).signalTypelon))
      elonlselon Nonelon
    val maybelonAggTwelonelontSignal =
      if (param(UnifielondUSSSignalParams.elonnablelonTwelonelontAggSourcelonParam))
        Somelon(
          SignalRelonquelonst(
            Somelon(aggrTwelonelontMaxSourcelonKelonyNum),
            param(UnifielondUSSSignalParams.TwelonelontAggTypelonParam).signalTypelon
          )
        )
      elonlselon Nonelon
    val maybelonAggProducelonrSignal =
      if (param(UnifielondUSSSignalParams.elonnablelonProducelonrAggSourcelonParam))
        Somelon(
          SignalRelonquelonst(
            Somelon(aggrProducelonrMaxSourcelonKelonyNum),
            param(UnifielondUSSSignalParams.ProducelonrAggTypelonParam).signalTypelon
          )
        )
      elonlselon Nonelon

    // nelongativelon signals
    val maybelonNelongativelonSignals = if (param(ReloncelonntNelongativelonSignalParams.elonnablelonSourcelonParam)) {
      elonnablelondNelongativelonSignalTypelons
        .map(nelongativelonSignal => SignalRelonquelonst(Somelon(unifielondMaxSourcelonKelonyNum), nelongativelonSignal)).toSelonq
    } elonlselon Selonq.elonmpty

    val allPositivelonSignals =
      if (param(UnifielondUSSSignalParams.RelonplacelonIndividualUSSSourcelonsParam))
        Selonq(
          maybelonReloncelonntOriginalTwelonelont,
          maybelonReloncelonntNotifications,
          maybelonRelonalGraphOon,
          maybelonGoodTwelonelontClick,
          maybelonGoodProfilelonClick,
          maybelonAggProducelonrSignal,
          maybelonAggTwelonelontSignal,
        )
      elonlselon
        Selonq(
          maybelonReloncelonntTwelonelontFavoritelon,
          maybelonReloncelonntRelontwelonelont,
          maybelonReloncelonntRelonply,
          maybelonReloncelonntOriginalTwelonelont,
          maybelonReloncelonntFollow,
          maybelonRelonpelonatelondProfilelonVisits,
          maybelonReloncelonntNotifications,
          maybelonTwelonelontSharelons,
          maybelonRelonalGraphOon,
          maybelonGoodTwelonelontClick,
          maybelonVidelonoVielonwTwelonelonts,
          maybelonGoodProfilelonClick,
          maybelonAggProducelonrSignal,
          maybelonAggTwelonelontSignal,
        )
    allPositivelonSignals.flattelonn ++ maybelonNelongativelonSignals
  }

}

objelonct UssStorelon {
  caselon class Quelonry(
    uselonrId: UselonrId,
    params: configapi.Params,
    product: Product)

  val elonnablelondNelongativelonSourcelonTypelons: Selont[SourcelonTypelon] =
    Selont(SourcelonTypelon.AccountBlock, SourcelonTypelon.AccountMutelon)
  privatelon val elonnablelondNelongativelonSignalTypelons: Selont[SignalTypelon] =
    Selont(SignalTypelon.AccountBlock, SignalTypelon.AccountMutelon)
}
