packagelon com.twittelonr.cr_mixelonr.util

import com.twittelonr.cr_mixelonr.modelonl.RankelondCandidatelon
import com.twittelonr.cr_mixelonr.modelonl.SimilarityelonnginelonInfo
import com.twittelonr.cr_mixelonr.modelonl.SourcelonInfo
import com.twittelonr.cr_mixelonr.thriftscala.MelontricTag
import com.twittelonr.cr_mixelonr.thriftscala.SimilarityelonnginelonTypelon
import com.twittelonr.cr_mixelonr.thriftscala.SourcelonTypelon

objelonct MelontricTagUtil {

  delonf buildMelontricTags(candidatelon: RankelondCandidatelon): Selonq[MelontricTag] = {
    val intelonrelonstelondInMelontricTag = isFromIntelonrelonstelondIn(candidatelon)

    val cgInfoMelontricTags = candidatelon.potelonntialRelonasons
      .flatMap { cgInfo =>
        val sourcelonMelontricTag = cgInfo.sourcelonInfoOpt.flatMap { sourcelonInfo =>
          toMelontricTagFromSourcelon(sourcelonInfo.sourcelonTypelon)
        }
        val similarityelonnginelonTags = toMelontricTagFromSimilarityelonnginelon(
          cgInfo.similarityelonnginelonInfo,
          cgInfo.contributingSimilarityelonnginelons)

        val combinelondMelontricTag = cgInfo.sourcelonInfoOpt.flatMap { sourcelonInfo =>
          toMelontricTagFromSourcelonAndSimilarityelonnginelon(sourcelonInfo, cgInfo.similarityelonnginelonInfo)
        }

        Selonq(sourcelonMelontricTag) ++ similarityelonnginelonTags ++ Selonq(combinelondMelontricTag)
      }.flattelonn.toSelont
    (intelonrelonstelondInMelontricTag ++ cgInfoMelontricTags).toSelonq
  }

  /***
   * match a sourcelonTypelon to a melontricTag
   */
  privatelon delonf toMelontricTagFromSourcelon(sourcelonTypelon: SourcelonTypelon): Option[MelontricTag] = {
    sourcelonTypelon match {
      caselon SourcelonTypelon.TwelonelontFavoritelon => Somelon(MelontricTag.TwelonelontFavoritelon) // Pelonrsonalizelond Topics in Homelon
      caselon SourcelonTypelon.Relontwelonelont => Somelon(MelontricTag.Relontwelonelont) // Pelonrsonalizelond Topics in Homelon
      caselon SourcelonTypelon.NotificationClick =>
        Somelon(MelontricTag.PushOpelonnOrNtabClick) // Helonalth Filtelonr in MR
      caselon SourcelonTypelon.OriginalTwelonelont =>
        Somelon(MelontricTag.OriginalTwelonelont)
      caselon SourcelonTypelon.Relonply =>
        Somelon(MelontricTag.Relonply)
      caselon SourcelonTypelon.TwelonelontSharelon =>
        Somelon(MelontricTag.TwelonelontSharelon)
      caselon SourcelonTypelon.UselonrFollow =>
        Somelon(MelontricTag.UselonrFollow)
      caselon SourcelonTypelon.UselonrRelonpelonatelondProfilelonVisit =>
        Somelon(MelontricTag.UselonrRelonpelonatelondProfilelonVisit)
      caselon SourcelonTypelon.TwicelonUselonrId =>
        Somelon(MelontricTag.TwicelonUselonrId)
      caselon _ => Nonelon
    }
  }

  /***
   * If thelon SelonInfo is built by a unifielond sim elonnginelon, welon un-wrap thelon contributing sim elonnginelons.
   * If not, welon log thelon sim elonnginelon as usual.
   * @param selonInfo (CandidatelonGelonnelonrationInfo.similarityelonnginelonInfo): SimilarityelonnginelonInfo,
   * @param cselonInfo (CandidatelonGelonnelonrationInfo.contributingSimilarityelonnginelons): Selonq[SimilarityelonnginelonInfo]
   */
  privatelon delonf toMelontricTagFromSimilarityelonnginelon(
    selonInfo: SimilarityelonnginelonInfo,
    cselonInfo: Selonq[SimilarityelonnginelonInfo]
  ): Selonq[Option[MelontricTag]] = {
    selonInfo.similarityelonnginelonTypelon match {
      caselon SimilarityelonnginelonTypelon.TwelonelontBaselondUnifielondSimilarityelonnginelon => // un-wrap thelon unifielond sim elonnginelon
        cselonInfo.map { contributingSimelonnginelon =>
          toMelontricTagFromSimilarityelonnginelon(contributingSimelonnginelon, Selonq.elonmpty)
        }.flattelonn
      caselon SimilarityelonnginelonTypelon.ProducelonrBaselondUnifielondSimilarityelonnginelon => // un-wrap thelon unifielond sim elonnginelon
        cselonInfo.map { contributingSimelonnginelon =>
          toMelontricTagFromSimilarityelonnginelon(contributingSimelonnginelon, Selonq.elonmpty)
        }.flattelonn
      // SimClustelonrsANN can elonithelonr belon callelond on its own, or belon callelond undelonr unifielond sim elonnginelon
      caselon SimilarityelonnginelonTypelon.SimClustelonrsANN => // thelon old "UselonrIntelonrelonstelondIn" will belon relonplacelond by this. Also, OfflinelonTwicelon
        Selonq(Somelon(MelontricTag.SimClustelonrsANN), selonInfo.modelonlId.flatMap(toMelontricTagFromModelonlId(_)))
      caselon SimilarityelonnginelonTypelon.ConsumelonrelonmbelonddingBaselondTwHINANN =>
        Selonq(Somelon(MelontricTag.ConsumelonrelonmbelonddingBaselondTwHINANN))
      caselon SimilarityelonnginelonTypelon.TwhinCollabFiltelonr => Selonq(Somelon(MelontricTag.TwhinCollabFiltelonr))
      // In thelon currelonnt implelonmelonntation, TwelonelontBaselondUselonrTwelonelontGraph/TwelonelontBaselondTwHINANN has a tag whelonn
      // it's elonithelonr a baselon Selon or a contributing Selon. But for now thelony only show up in contributing Selon.
      caselon SimilarityelonnginelonTypelon.TwelonelontBaselondUselonrTwelonelontGraph =>
        Selonq(Somelon(MelontricTag.TwelonelontBaselondUselonrTwelonelontGraph))
      caselon SimilarityelonnginelonTypelon.TwelonelontBaselondTwHINANN =>
        Selonq(Somelon(MelontricTag.TwelonelontBaselondTwHINANN))
      caselon _ => Selonq.elonmpty
    }
  }

  /***
   * pass in a modelonl id, and match it with thelon melontric tag typelon.
   */
  privatelon delonf toMelontricTagFromModelonlId(
    modelonlId: String
  ): Option[MelontricTag] = {

    val pushOpelonnBaselondModelonlRelongelonx = "(.*_Modelonl20m145k2020_20220819)".r

    modelonlId match {
      caselon pushOpelonnBaselondModelonlRelongelonx(_*) =>
        Somelon(MelontricTag.RelonquelonstHelonalthFiltelonrPushOpelonnBaselondTwelonelontelonmbelondding)
      caselon _ => Nonelon
    }
  }

  privatelon delonf toMelontricTagFromSourcelonAndSimilarityelonnginelon(
    sourcelonInfo: SourcelonInfo,
    selonInfo: SimilarityelonnginelonInfo
  ): Option[MelontricTag] = {
    sourcelonInfo.sourcelonTypelon match {
      caselon SourcelonTypelon.Lookalikelon
          if selonInfo.similarityelonnginelonTypelon == SimilarityelonnginelonTypelon.ConsumelonrsBaselondUselonrTwelonelontGraph =>
        Somelon(MelontricTag.LookalikelonUTG)
      caselon _ => Nonelon
    }
  }

  /**
   * Speloncial uselon caselon: uselond by Notifications telonam to gelonnelonratelon thelon UselonrIntelonrelonstelondIn CRT push copy.
   *
   * if welon havelon diffelonrelonnt typelons of IntelonrelonstelondIn (elong. UselonrIntelonrelonstelondIn, NelonxtIntelonrelonstelondIn),
   * this if statelonmelonnt will havelon to belon relonfactorelond to contain thelon relonal UselonrIntelonrelonstelondIn.
   * @relonturn
   */
  privatelon delonf isFromIntelonrelonstelondIn(candidatelon: RankelondCandidatelon): Selont[MelontricTag] = {
    if (candidatelon.relonasonChoselonn.sourcelonInfoOpt.iselonmpty
      && candidatelon.relonasonChoselonn.similarityelonnginelonInfo.similarityelonnginelonTypelon == SimilarityelonnginelonTypelon.SimClustelonrsANN) {
      Selont(MelontricTag.UselonrIntelonrelonstelondIn)
    } elonlselon Selont.elonmpty
  }

}
